--- a/arzar_list/arzar_list.html
+++ b/arzar_list/arzar_list.html
@@ -2,17 +2,14 @@
 <head>
   <link rel = "stylesheet" href = "list_bg.css">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <title>Лист ArZar</title>
+  <title>Лист</title>
 </head>
 
 <body>
   <p align="center">ArZar лист</p>
 <form name="search">
-<button id="login" class="button blue">
-  <i class="fa fa-unlock"></i>
-  <span>Войти</span>
-</button>
-
+<input name="input" type="text" placeholder="" />
+<span class="input_label">Имя</span>
 </form>
   <script src="js_list.js"></script>
 </body>
